--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 </head>
 <body>
-	<h1>naglowek Mateusza</h1>
+	<h1>naglowek Mateusza ale juz Bartka</h1>
+	<h2> naglowek Bartka </h2>
 	<p>paragraf Mateusza<p>
 	<p>blabla</p>
 </body>
